Fixed the stretching of Event images

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1035,6 +1035,7 @@ hr {
   width: 100%;
   height: 100%;
   aspect-ratio: 16/9;
+  object-fit: contain;
 }
 
 .events_box .content {
